<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Alexandria</string>
    <string name="title_activity_book_detail">Book Detail</string>
    <!-- Menu Items -->
    <string name="books">List of Books</string>
    <string name="scan">Scan/Add a Book</string>
    <string name="about">About this App</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scan_button">Scan Barcode</string>
    <string name="scan_button_internal">Scan Barcode(Internal)</string>
    <string name="scan_button_external">Scan Barcode(External)</string>

    <string name="title_scan_msg">Scan Barcode</string>

    <!-- confirm dialog -->
    <string name="msg_dialog_confirm_delete">Are you sure you want to delete this book from library?</string>
    <string name="msg_dialog_confirm_title">Delete from library?</string>
    <string name="msg_delete_now">Delete now</string>


    <!-- setting -->
    <string name="action_settings">Settings</string>

    <string name="pref_startScreen" >Select Startscreen</string>
    <string name="pref_start_default" translatable="false">0</string>

    <string name="pref_pref_startScreen_key" translatable="false">pref_StartScreen</string>

    <string name="pref_scanType_key" translatable="false">pref_scanType</string>
    <string name="pref_scanType">Select Barcode Scan type</string>

    <string name="internal_scan">Internal Barcode Scanner</string>
    <string name="external_scan">External Barcode Scanner App</string>
    <string name="pref_scan_default" translatable="false">0</string>


    <!-- <string name="input_hint">Insert ISBN-13. Digits only.</string>-->
    <string name="input_hint">Enter ISBN</string>
    <!--<string name="input_book_hint">Enter Book title or Author</string>-->

    <!-- content description -->
    <string name="book_cover">Bookcover</string>

    <string name="ok_button">Next</string>
    <string name="delete_button">Delete</string>



    <string name="search">Search</string>
    <string name="delete">Delete Book</string>

    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

    <string name="blank_icon">Blank screen icon</string>

    <!-- Error message -->
    <string name="not_found">No Book found</string>
    <string name="system_error">There is some system error. Please retry.</string>
    <string name="no_internet_connection">There is no internet connection. Please check your device.</string>
    <string name="book_already_registerd">This book [%1$s] is already registered. Please check your book list.</string>
    <string name="fail_to_scan">Sorry. Fail to scan. Please try again.</string>
    <string name="digits_only">Please enter digits only..</string>
    <string name="msg_samebook">It\'s same book which is displayed now.</string>

    <!-- list menu Search options -->
    <string name="search_by_isbn_hint">Enter ISBN-13</string>

    <!-- Scanner app download -->
    <string name="title_app_download">Download</string>
    <string name="error_no_app">There is no scanner app. Would you install from Google Play?</string>
    <string name="msg_yes">Yes</string>
    <string name="msg_cancel">Cancel</string>
    <string name="msg_no">No</string>
    <string name="title_error">Error</string>
    <string name="msg_really_quit">Do you really want to quit?</string>
    <string name="not_found_playstore">Google Play not found! Please check your device.</string>

    <!-- empty View-->
    <string name="no_book_is_registered">There is no book registered.\nPlease add books or search again.</string>

    <!-- about -->
    <string name="about_text">This application gets book information from a Google API. All titles, cover images, and author information come from there.
    The original version of this app was built by Sascha Jaschke, and a modified version is given to students in the Udacity Android Nanodegree program. </string>


</resources>
