<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBookFragment"
             >
<!-- benchmarking
http://drippler.com/drip/scan-book-barcodes-stores-quick-access-reviews-android -->

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/fragment_add_book_topmargin">
        <LinearLayout
            android:id="@+id/ean_container"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"  >

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_launcher"
                />

            <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_button"
            android:id="@+id/scan_button"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/search_by_isbn_hint"
                android:gravity="center_vertical|center_horizontal"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ean_container"  >
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                >
                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="100dp"
                    android:layout_height="145dp"
                    android:contentDescription="@string/book_cover"
                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:id="@+id/bookTitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="@dimen/head_line"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/bookSubTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:maxLines="5"
                        android:ellipsize="end"
                        android:textSize="@dimen/normal_fontsize"/>

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="@dimen/normal_fontsize"
                        android:textStyle="bold"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:id="@+id/categories"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textSize="@dimen/normal_fontsize"

                        />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/background_material_light">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/delete_button"
                android:layout_weight="1"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/delete_button"
                android:drawableLeft="@drawable/ic_action_discard"
                android:drawableStart="@drawable/ic_action_discard"
                android:visibility="invisible"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/ok_button"
                android:visibility="invisible"
                android:layout_weight="1"
                android:id="@+id/save_button"
                android:drawableLeft="@drawable/ic_action_accept"
                android:drawableStart="@drawable/ic_action_accept"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_gravity="bottom"
                />
        </LinearLayout>

    </RelativeLayout>
    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressCircle"
        android:visibility="invisible"
        android:layout_gravity="center"
        />

</FrameLayout>
